redone home work

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <p><label for="age">Вік</label><input type="number" name="age" min="1" max="100" step="1"></p>
                 <p><label for="mail">E-mail</label><input type="email" name="mail"></p>
                 <p><label for="bday">Дата народження<input type="date" name="bday"></label></p>
-                <p><label for="phone">Телефон<input type="tel" name="phone" placeholder="+380XX-XXX-XX-XX"></label></p>
-                <p><label for="mymail">Email отпимувача<em>* </em><input type="email" name="mymail" readonly required
+                <p><label for="phone">Телефон<em>* </em><input type="tel" name="phone" required placeholder="+380XX-XXX-XX-XX"></label></p>
+                <p><label for="mymail">Email отпимувача<em>* </em><input type="email" name="mymail" required readonly required
                             value="gritsienko.tatiana@gmail.com"></label></p>
             </div>
         </fieldset>
